--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="item_3">Home</string>
     <string name="item_4">Nights</string>
     <string name="item_5">Winners</string>
+    <string name="item_6">About Us</string>
 
     <string name="day_0">Day 0</string>
     <string name="day_1">Day 1</string>
