--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,10 @@
 <resources>
     <string name="app_name">Waves 2018</string>
     <string name="item_1">Events</string>
-    <string name="item_2">Spot On</string>
+    <string name="item_2">Voting</string>
     <string name="item_3">Home</string>
-    <string name="item_4">Nights</string>
+    <string name="item_4">Live Now</string>
     <string name="item_5">Winners</string>
-    <string name="item_6">About Us</string>
 
     <string name="day_0">Day 0</string>
     <string name="day_1">Day 1</string>
@@ -34,6 +33,7 @@
     <string name="event_5">Nukkad Natak</string>
     <string name="event_6">Skime</string>
     <string name="event_7">Indian Rock</string>
+    <string name="waves_2018">Waves 2018</string>
 
     <string-array name="events_array">
         <item>Spin Off</item>
